# icalendar-filter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yml
.devcontainer/: devcontainer.json
.github/workflows/: CI-CD-pipeline.yaml
src/icalendar-filter/: app.py
